<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.orvdroid.gui.views.RecyclerViewEmptySupport
        android:id="@+id/statusRCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>
    <Button
        android:id="@+id/timezoneBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_timezone"/>
    <Button
        android:id="@+id/timerBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_timer"/>
    <Button
        android:id="@+id/timersBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timersBTN"/>
    <TextView
        android:id="@+id/mytimeTXV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        />
</LinearLayout>