<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.orvdroid.gui.views.RecyclerViewEmptySupport
        android:id="@+id/keysRCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>
    <TextView android:id="@+id/keysEmptyTXV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ta_nokey"/>
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addKeyBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_addtimer" />
        <Button
            android:id="@+id/editKeyBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_edittimer" />
        <Button
            android:id="@+id/delKeyBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_deltimer" />
    </LinearLayout>
</merge>